remove old files Add drill down module Fix text-graph alignment on a few graphs

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -48,6 +48,10 @@ body, html {
 		display:none;
 		padding:20px;
 	}
+
+	.graph {
+		z-index: 1000;
+	}
 	 
 }
 
